Making Authentication Functional.